<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_schedule" />
        <item
            android:id="@+id/nav_choose"
            android:icon="@drawable/search_48"
            android:title="@string/nav_choose" />
        <item
            android:id="@+id/nav_schedules"
            android:title="@string/nav_myschedule"
            android:icon="@drawable/star_48"/>
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

</menu>
