<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.rybakovsemyon.timetableproject.application.CreateLessonActivity"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cl_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cl_subject"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/ed_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/cl_ed_subject"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_subject"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/cl_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cl_type"
        android:textColor="@color/black"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/ed_subject"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/ed_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/cl_type"
        app:layout_constraintTop_toBottomOf="@+id/ed_subject" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cl_start"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/ed_type"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/ed_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/ed_type" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:text="@string/cl_period1"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_time" />

    <Spinner
        android:id="@+id/ed_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/ed_time" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="11dp"
        android:text="@string/cl_period2"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@+id/ed_start"
        app:layout_constraintTop_toBottomOf="@+id/ed_time" />

    <Spinner
        android:id="@+id/ed_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/ed_time" />

    <TextView
        android:id="@+id/cl_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_start" />

    <EditText
        android:id="@+id/ed_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_info1" />

    <TextView
        android:id="@+id/cl_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_info1" />

    <EditText
        android:id="@+id/ed_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_info2" />

    <Button
        android:id="@+id/new_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/create_lesson"
        android:textAllCaps="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/item_home_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>